<resources>
    <string name="app_name">Squad Gyan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Prediction Application</string>
    <string name="nav_header_subtitle">Prediction Application</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_about_us">About us</string>
    <string name="menu_rate_us">Rate us</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="menu_terms_condition">Terms &amp; Condition</string>

    <string name="toolbar_cricket">Cricket</string>
    <string name="toolbar_football">Football</string>
    <string name="toolbar_basketball">Basketball</string>

    <string name="match_details">Match Details</string>
    <string name="team_details">Team Details</string>
    <string name="match">Match</string>
    <string name="tournament">Tournament</string>
    <string name="date">Date</string>
    <string name="time">Time</string>

    <string name="kindly_find_the_application">Kindly find the application on </string>

    <string name="send_to">Send To</string>

    <string name="no_data_available">No Data Available</string>
    <string name="no_internet">No Internet</string>


    <!--fcm variables-->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">Prediction Hub</string>
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>

    <string name="plz_click_back_again_to_exit">Please click BACK again to exit</string>

    <string name="dismiss">Dismiss</string>
    <string name="err_msg_match_not_available">Match detail will be available soon, you will get notified when match detail is available. </string>

    <string name="update_application">Update Application</string>
    <string name="skip">Skip >>></string>
    <string name="update">Update</string>
    <string name="update_application_msg">New version of application is available. </string>

    <string name="match_details_available">Match Details Available</string>
    <string name="match_details_not_available">Match Details Not Available</string>

    <string name="match_ongoing">Ongoing</string>

    <string name="prediction_first">Prediction First</string>

    <string name="prediction_second">Prediction Second</string>

    <string name="wicket_keeper">Wicket-Keepers</string>

    <string name="batsmen">Batsmen</string>

    <string name="all_round">All-Rounders</string>

    <string name="bowler">Bowlers</string>

    <string name="not_able_to_find_application">Not able to find application</string>

    <string name="captain">C</string>
    <string name="vice_captain">VC</string>

</resources>